# microbloggy

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.builder  Makefile  README.md  package-lock.json  package.json  rollup.config.js
js/: index.js  messages.js
js/components/: CreatePost.vue  Messages.vue
migrations/: 20201214021713_initial.sql  20201219165131_images.sql
src/: config.rs  images.rs  main.rs  routes.rs  routes_api.rs  tests.rs
static/: index.js  main.js  post.js  style.css
templates/: base.html  index.html  login.html  post.html  profile.html  profile_edit.html
